# secretKEEPER

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: linux.yml
agent/: Cargo.toml
agent/config/: default.toml  freebsd.toml  linux.toml  macos.toml  netbsd.toml
agent/src/: cli.rs  error.rs  lib.rs  main.rs
agent/src/config/: mod.rs  schema.rs
agent/src/ipc/: handlers.rs  mod.rs  protocol.rs  server.rs
agent/src/monitor/: freebsd_dtrace.rs  linux_fanotify.rs  macos_esf.rs  macos_eslogger.rs  mod.rs  netbsd_dtrace.rs
agent/src/process/: context.rs  mod.rs  package.rs  package_cache.rs  tree.rs
agent/src/rules/: allow_rule.rs  engine.rs  exception.rs  learning.rs  mod.rs
agent/src/storage/: mod.rs  sqlite.rs
docs/: linux-config-reference.md  linux-installation.md
install/freebsd/: secretkeeper.rc
install/linux/: secretkeeper.service
install/linux/apparmor/: usr.local.bin.secretkeeper-agent
install/linux/selinux/: secretkeeper.fc  secretkeeper.if  secretkeeper.te
install/macos/: com.codegroove.secretkeeper.agent.plist
install/netbsd/: secretkeeper.rc
media/icons/: AppIcon.icns
packaging/: build-deb.sh  build-rpm.sh
packaging/debian/: changelog  control  postinst  postrm  prerm  rules
packaging/rpm/: secretkeeper.spec
scripts/: bump-version.sh  release.sh
ui-swift/SecretKeeper/: Package.swift
ui-swift/SecretKeeper/Sources/SecretKeeper/: SecretKeeperApp.swift
ui-swift/SecretKeeper/Sources/SecretKeeper/Models/: AppState.swift  Exception.swift  Violation.swift
ui-swift/SecretKeeper/Sources/SecretKeeper/Services/: AgentManager.swift  IPCClient.swift
ui-swift/SecretKeeper/Sources/SecretKeeper/Views/: AgentInstallView.swift  ExceptionManagerView.swift  InstallationSuccessView.swift  MenuBarView.swift  ProcessTreeView.swift  SettingsView.swift  ViolationAlertView.swift  ViolationHistoryView.swift
ui-swift/SecretKeeper/Sources/SecretKeeperLib/: Exception.swift  ExceptionMatching.swift  Violation.swift
ui-swift/SecretKeeper/Tests/SecretKeeperTests/: CodingTests.swift  ExceptionMatchingTests.swift  ExceptionTests.swift  ViolationTests.swift
ui-tauri/: Cargo.toml  tauri.conf.json
ui-tauri/src/: commands.rs  ipc_client.rs  main.rs
ui-tauri/ui/: alert.html  app.js  index.html  styles.css
