[workspace]
resolver = "2"
members = ["agent", "ui-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/secretkeeper/secretkeeper"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
uuid = { version = "1.10", features = ["v4"] }
glob = "0.3"
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process", "user"] }
