[package]
name = "secretkeeper-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Secret exfiltration prevention daemon"

[features]
default = []
esf = ["endpoint-sec"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
glob = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
dirs = "5.0"
async-trait = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
endpoint-sec = { version = "0.4", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
# fanotify support via nix

[target.'cfg(target_os = "freebsd")'.dependencies]
# dtrace/kqueue via nix

[dev-dependencies]
tempfile = "3.13"

[[bin]]
name = "secretkeeper-agent"
path = "src/main.rs"
